# k2eg-python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  kafka-test.py  pyproject.toml  requirements.txt  settings.toml
.devcontainer/: DockerfileDevContainer.epics  devcontainer.json  docker-compose.yml
.github/workflows/: BuildAndTest.yml  Publish.yml
examples/: example-1.py  monitor-from-file.py  pv-names.txt
k2eg/: __init__.py  __main__.py  _broker.py  broker.py  cli.py  dml.py  k2eg.py  serialization.py
k2eg/cli/: __init__.py  __main__.py  get.py  monitor.py  put.py
k2eg/environment/: bad_test.ini  lcls.ini  test.ini
kafka/: producer.kafka
tests/: epics-test.db  k2eg-nttable-ioc.py  test_broker.py  test_config.py  test_dml.py  test_k2eg.py  test_serialization.py
tools/: consumer.kafka  init-test-topics.py  producer.kafka
