[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "k2eg"
version = "0.0.1"
description = "A k2eg library"
readme = "Permit to submit command and listen from result using k2eg gateway through Kakfka"
authors = [{name = "Claudio Bisegni", email = "bisegni@slac.stanford.edu"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer",
    "colorama",
    "shellingham",
    "kafka_python",
    "python_snappy",
    "rich",
    "msgpack",
    "dynaconf",
    "readerwriterlock",
    "python-dotenv"
]

[project.scripts]
k2eg = "k2eg.__main__:main"

[project.optional-dependencies]
test = [
    "pytest-runner",
    "pytest"
]
