[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "k2eg"
version = "0.0.0"
description = "A k2eg library"
readme = "Permit to interact with k2eg throught kakfka"
authors = [{name = "Claudio Bisegni", email = "bisegni@slac.stanford.edu"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer",
    "colorama",
    "shellingham",
    "confluent-kafka",
    "python_snappy",
    "rich",
    "msgpack",
    "dynaconf",
    "readerwriterlock",
    "python-dotenv"
]

[project.scripts]
k2eg = "k2eg.cli.__main__:main"

[project.optional-dependencies]
test = [
    "pytest-runner",
    "pytest"
]
